@@ -1,5 +1,13 @@
 2017-10-28  Bruno Haible  <bruno@clisp.org>
 
+	Use SINGLEMAP_MEMORY by default on most 64-bit platforms.
+	* lispbibl.d: Revise decision whether to use SINGLEMAP_MEMORY: Ignore
+	MMAP_FIXED_ADDRESS_HIGHEST_BIT (since the SINGLEMAP_* parameters handle
+	this more precisely). Don't disable it on Linux/s390x (where it actually
+	works). Don't disable it in MULTITHREAD mode.
+
+2017-10-28  Bruno Haible  <bruno@clisp.org>
+
 	Make SINGLEMAP_MEMORY work reliably on many platforms.
 	* Makefile.devel (build-porting*-spvw_pure_blocks): Don't disable
 	GENERATIONAL_GC when testing this configuration.
